--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -18,189 +18,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-        <TextView
-            android:id="@+id/CalcPxToEm"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/calc_spinner"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/calc_text_px_to_em"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/CalcTest" />
-        <LinearLayout
-            android:id="@+id/firstRow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CalcPxToEm" >
 
-            <TextView
-                android:id="@+id/text1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/calc_default_px"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="@color/black" />
-            <EditText
-                android:id="@+id/input_text_view1"
-                android:layout_width="100sp"
-                android:layout_height="50sp"
-                android:gravity="center"
-                android:layout_margin="8dp"
-                android:textSize="20sp"
-                android:background="@color/c3"
-                android:textColorHint="@color/c2"
-                android:inputType="number" />
-            <TextView
-                android:id="@+id/text2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/calc_px"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="@color/black" />
-            <EditText
-                android:id="@+id/input_text_view2"
-                android:layout_width="100sp"
-                android:layout_height="50sp"
-                android:gravity="center"
-                android:layout_margin="8dp"
-                android:textSize="20sp"
-                android:background="@color/c3"
-                android:textColorHint="@color/c2"
-                android:inputType="number" />
-        </LinearLayout>
-        <Button
-            android:id="@+id/calc_calculate1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_calculate"
-            android:onClick="px_to_em"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/firstRow" />
-        <TextView
-            android:id="@+id/output_text_px_to_em"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/calc_em"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calc_calculate1" />
-        <TextView
-            android:id="@+id/output_px_to_em"
-            android:layout_width="100sp"
-            android:layout_height="50sp"
-            android:gravity="center"
-            android:layout_margin="8dp"
-            android:textSize="20sp"
-            android:background="@color/c3"
-            android:textColorHint="@color/c2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/output_text_px_to_em" />
-
-
-        <TextView
-            android:id="@+id/CalcEmToPx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/calc_text_em_to_px"
-            android:layout_marginTop="50dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/output_px_to_em" />
-        <LinearLayout
-            android:id="@+id/secondRow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CalcEmToPx" >
-
-            <TextView
-                android:id="@+id/text3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/calc_default_px"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="@color/black" />
-            <EditText
-                android:id="@+id/input_text_view3"
-                android:layout_width="100sp"
-                android:layout_height="50sp"
-                android:gravity="center"
-                android:layout_margin="8dp"
-                android:textSize="20sp"
-                android:background="@color/c3"
-                android:textColorHint="@color/c2"
-                android:inputType="number" />
-            <TextView
-                android:id="@+id/text4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/calc_em"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="@color/black" />
-            <EditText
-                android:id="@+id/input_text_view4"
-                android:layout_width="100sp"
-                android:layout_height="50sp"
-                android:gravity="center"
-                android:layout_margin="8dp"
-                android:textSize="20sp"
-                android:background="@color/c3"
-                android:textColorHint="@color/c2"
-                android:inputType="number" />
-        </LinearLayout>
-        <Button
-            android:id="@+id/calc_calculate2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_calculate"
-            android:onClick="em_to_px"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/secondRow" />
-        <TextView
-            android:id="@+id/output_text_em_to_px"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/calc_px"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calc_calculate2" />
-        <TextView
-            android:id="@+id/output_em_to_px"
-            android:layout_width="100sp"
-            android:layout_height="50sp"
-            android:gravity="center"
-            android:layout_margin="8dp"
-            android:textSize="20sp"
-            android:background="@color/c3"
-            android:textColorHint="@color/c2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/output_text_em_to_px" />
 </androidx.constraintlayout.widget.ConstraintLayout>
