--- a/app/src/main/res/layout/calc_px_to_em.xml
+++ b/app/src/main/res/layout/calc_px_to_em.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalcEmToPx">
+    tools:context=".CalcPxToEm">
 
     <TextView
-        android:id="@+id/CalcEmToPx"
+        android:id="@+id/CalcPxToEm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calc_text_em_to_px"
+        android:text="@string/calc_text_px_to_em"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CalcEmToPx" >
+        app:layout_constraintTop_toBottomOf="@+id/CalcPxToEm" >
 
         <TextView
             android:id="@+id/text1"
@@ -49,7 +49,7 @@
             android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_em"
+            android:text="@string/calc_px"
             android:gravity="center"
             android:textSize="20sp"
             android:textColor="@color/black" />
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_calculate"
-        android:onClick="emToPx"
+        android:onClick="pxToEm"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstRow" />
@@ -77,7 +77,7 @@
         android:id="@+id/output_text_px_to_em"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calc_px"
+        android:text="@string/calc_em"
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -86,7 +86,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calc_calculate1" />
     <TextView
-        android:id="@+id/output_em_to_px"
+        android:id="@+id/output_px_to_em"
         android:layout_width="100sp"
         android:layout_height="50sp"
         android:gravity="center"
