--- a/app/src/main/res/layout/calc_percent_to_px.xml
+++ b/app/src/main/res/layout/calc_percent_to_px.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".">
+    tools:context=".CalcPercentToPx">
 
     <TextView
         android:id="@+id/CalcPercentToPx"
@@ -74,7 +74,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstRow" />
     <TextView
-        android:id="@+id/output_text_px_to_em"
+        android:id="@+id/output_text_percent_to_px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/calc_px"
@@ -86,7 +86,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calc_calculate1" />
     <TextView
-        android:id="@+id/output_em_to_px"
+        android:id="@+id/output_percent_to_px"
         android:layout_width="100sp"
         android:layout_height="50sp"
         android:gravity="center"
@@ -96,6 +96,6 @@
         android:textColorHint="@color/c2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/output_text_px_to_em" />
+        app:layout_constraintTop_toBottomOf="@+id/output_text_percent_to_px" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
