--- a/app/src/main/res/layout/calc_px_to_vw.xml
+++ b/app/src/main/res/layout/calc_px_to_vw.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".">
+    tools:context=".CalcPxToVw">
 
     <TextView
-        android:id="@+id/CalcPercentToPx"
+        android:id="@+id/CalcPxToVw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calc_percent_to_px"
+        android:text="@string/calc_px_to_vw"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CalcPercentToPx" >
+        app:layout_constraintTop_toBottomOf="@+id/CalcPxToVw" >
 
         <TextView
             android:id="@+id/text1"
@@ -49,7 +49,7 @@
             android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_percent"
+            android:text="@string/calc_px"
             android:gravity="center"
             android:textSize="20sp"
             android:textColor="@color/black" />
@@ -74,10 +74,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstRow" />
     <TextView
-        android:id="@+id/output_text_px_to_em"
+        android:id="@+id/output_text_px_to_vw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calc_px"
+        android:text="@string/calc_vw"
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -86,7 +86,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calc_calculate1" />
     <TextView
-        android:id="@+id/output_em_to_px"
+        android:id="@+id/output_px_to_vw"
         android:layout_width="100sp"
         android:layout_height="50sp"
         android:gravity="center"
@@ -96,6 +96,6 @@
         android:textColorHint="@color/c2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/output_text_px_to_em" />
+        app:layout_constraintTop_toBottomOf="@+id/output_text_px_to_vw" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
