--- a/app/src/main/res/layout/calc_vh_to_px.xml
+++ b/app/src/main/res/layout/calc_vh_to_px.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".">
+    tools:context=".CalcVhToPx">
 
     <TextView
         android:id="@+id/CalcVhToPx"
@@ -86,7 +86,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calc_calculate1" />
     <TextView
-        android:id="@+id/output_em_to_px"
+        android:id="@+id/output_vh_to_px"
         android:layout_width="100sp"
         android:layout_height="50sp"
         android:gravity="center"
