--- a/app/src/main/res/layout/activity_minunmin.xml
+++ b/app/src/main/res/layout/activity_minunmin.xml
@@ -19,4 +19,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Spinner
+        android:id="@+id/css_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CalcTest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
