--- a/app/src/main/res/layout/calc_em_to_px.xml
+++ b/app/src/main/res/layout/calc_em_to_px.xml
@@ -62,7 +62,7 @@
             android:textSize="20sp"
             android:background="@color/c3"
             android:textColorHint="@color/c2"
-            android:inputType="number" />
+            android:inputType="numberDecimal" />
     </LinearLayout>
     <Button
         android:id="@+id/calc_calculate1"
