--- a/app/src/main/res/layout/calc_px_to_percent.xml
+++ b/app/src/main/res/layout/calc_px_to_percent.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_calculate"
-        android:onClick="pxToEm"
+        android:onClick="emToPx"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstRow" />
