--- a/app/src/main/res/layout/activity_min.xml
+++ b/app/src/main/res/layout/activity_min.xml
@@ -4,23 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MinActivity">
 
     <TextView
         android:id="@+id/CalcTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/minunmin_text"
+        android:text="@string/min_text"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <Spinner
-        android:id="@+id/css_spinner"
+        android:id="@+id/min_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
