--- a/app/src/main/res/layout/calc_px_to_vw.xml
+++ b/app/src/main/res/layout/calc_px_to_vw.xml
@@ -31,7 +31,7 @@
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_default_px"
+            android:text="@string/calc_Viewport_Width"
             android:gravity="center"
             android:textSize="20sp"
             android:textColor="@color/black" />
